@@ -1,3 +1,5 @@
+* `evaluate` gains `debug` argument
+
 Version 0.4.1
 ------------------------------------------------------------------------------
 
